Add link to new Embedded DB JUnit site

--- a/blog/_drafts/2015-06-12-new-post.md
+++ b/blog/_drafts/2015-06-12-new-post.md
@@ -5,6 +5,6 @@ description: "rxJava combined with DropWizard and @mbknor's wonderful ActiveMQ b
 category: development
 tags: [RxJava,DropWizard,JMS,ActiveMQ]
 ---
-Content
+The RxJava library developed by Netflix, provides us Java-biased developers with Reactive Extensions for Java. How great isn't that?   
 
 {% include JB/setup %}
